<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="@dimen/border_margin"
            android:orientation="vertical"
            android:background="@drawable/dicider">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:text="@string/jykx_scqk"
                android:textSize="18sp"
                android:textColor="#000">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:padding="@dimen/border_margin"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/dicider"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jylx_sdtf"
                        android:textSize="16sp"
                        android:padding="@dimen/border_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/border_margin"
                        android:textSize="14sp"
                        android:text="未开启"
                        android:textColor="@color/bottom_color_press"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/border_margin"
                    android:background="@drawable/dicider"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jylx_qttf"
                        android:textSize="16sp"
                        android:padding="@dimen/border_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/border_margin"
                        android:textSize="14sp"
                        android:text="未开启"
                        android:textColor="@color/bottom_color_press"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/dicider"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jylx_xbtf"
                        android:textSize="16sp"
                        android:padding="@dimen/border_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/border_margin"
                        android:textSize="14sp"
                        android:text="未开启"
                        android:textColor="@color/bottom_color_press"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/border_margin"
                    android:background="@drawable/dicider"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jylx_jjtf"
                        android:textSize="16sp"
                        android:padding="@dimen/border_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/border_margin"
                        android:textSize="14sp"
                        android:text="未开启"
                        android:textColor="@color/bottom_color_press"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="@dimen/border_margin"
            android:background="@drawable/dicider">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:text="@string/jykx_sccq"
                android:textSize="18sp"
                android:textColor="#000">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:padding="@dimen/border_margin"
                android:background="@android:color/black"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:layout_marginTop="@dimen/border_margin"
                android:background="@drawable/dicider">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/border_margin"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/jylx_sdtf"
                    android:textSize="16sp"
                    android:padding="@dimen/border_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="New"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/border_margin"
                    android:textColor="#D32F2F"
                    android:textStyle="italic"
                    android:padding="@dimen/border_margin"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:layout_marginTop="@dimen/border_margin"
                android:background="@drawable/dicider">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/border_margin"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/jylx_qttf"
                    android:textSize="16sp"
                    android:padding="@dimen/border_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="New"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/border_margin"
                    android:textColor="#D32F2F"
                    android:textStyle="italic"
                    android:padding="@dimen/border_margin"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:layout_marginTop="@dimen/border_margin"
                android:background="@drawable/dicider">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/border_margin"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/jylx_xbtf"
                    android:textSize="16sp"
                    android:padding="@dimen/border_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="New"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/border_margin"
                    android:textColor="#D32F2F"
                    android:textStyle="italic"
                    android:padding="@dimen/border_margin"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:layout_marginTop="@dimen/border_margin"
                android:background="@drawable/dicider">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/border_margin"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/jylx_jjtf"
                    android:textSize="16sp"
                    android:padding="@dimen/border_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="New"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/border_margin"
                    android:textColor="#D32F2F"
                    android:textStyle="italic"
                    android:padding="@dimen/border_margin"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="@dimen/border_margin"
            android:background="@drawable/dicider">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:text="@string/jykx_sctz"
                android:textSize="18sp"
                android:textColor="#000">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:padding="@dimen/border_margin"
                android:background="@android:color/black"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:layout_marginTop="@dimen/border_margin"
                android:background="@drawable/dicider">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/border_margin"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/sctz_sctz"
                    android:textSize="16sp"
                    android:padding="@dimen/border_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="New"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/border_margin"
                    android:textColor="#D32F2F"
                    android:textStyle="italic"
                    android:padding="@dimen/border_margin"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:layout_marginTop="@dimen/border_margin"
                android:background="@drawable/dicider">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/border_margin"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/sctz_gztz"
                    android:textSize="16sp"
                    android:padding="@dimen/border_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="New"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/border_margin"
                    android:textColor="#D32F2F"
                    android:textStyle="italic"
                    android:padding="@dimen/border_margin"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_margin"
                android:layout_marginTop="@dimen/border_margin"
                android:background="@drawable/dicider">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/border_margin"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/sctz_xyqk"
                    android:textSize="16sp"
                    android:padding="@dimen/border_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="New"
                    android:textSize="12sp"
                    android:layout_marginEnd="@dimen/border_margin"
                    android:textColor="#D32F2F"
                    android:textStyle="italic"
                    android:padding="@dimen/border_margin"/>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/jykx_scgz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/sctz_scgz"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end|center_vertical"/>
    </LinearLayout>

</ScrollView>


